--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
+    "moment": "^2.23.0",
     "mongoose": "^5.4.0",
     "request": "^2.88.0"
   }
